src/test/deca/context/valid/return/return_in_conditional_expression.deca
// Description :
// Return utilisant une expression conditionnelle (if inline)
// 
// Resultats :
// ok

class A {
    int f(int a) { return a > 0 ? a : -a; }
}
