src/test/deca/context/invalid/classes/method_return_type_void_in_expr.deca
// Description :
//    Méthode void utilisée comme expression.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    void f() {
    }
}

{
    A a = new A();
    int x = a.f();
}

